# che-che4z-lsp-for-cobol

.github/workflows/: native.yml
clients/cobol-lsp-vscode-extension/: package.json
clients/cobol-lsp-vscode-extension/src/: extension.ts
clients/cobol-lsp-vscode-extension/src/__mocks__/: vscode.ts
clients/cobol-lsp-vscode-extension/src/__tests__/: extensionTest.spec.ts
clients/cobol-lsp-vscode-extension/src/__tests__/task/: CompileTaskProviderTest.spec.ts  CustomBuildTaskTerminalTest.spec.ts
clients/cobol-lsp-vscode-extension/src/task/jcl/: CobolCompileJCLProvider.ts
clients/cobol-lsp-vscode-extension/src/task/providers/: CompileTaskProvider.ts  SpoolContentProvider.ts  TerminalLinkProvider.ts
clients/cobol-lsp-vscode-extension/src/task/taskServices/: CompileService.ts  TerminalDisplayService.ts
server/: .gitignore  BUILD.bazel
server/common/: BUILD.bazel  MODULE.bazel  maven_install.json
server/common/src/main/java/org/eclipse/lsp/cobol/common/copybook/: CopybookService.java
server/engine/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  maven_install.json
server/engine/src/main/antlr4/org/eclipse/lsp/db2/parser/: Db2SqlParser.g4
server/engine/src/main/java/org/eclipse/lsp/cobol/core/visitor/: CobolVisitor.java
server/engine/src/main/java/org/eclipse/lsp/cobol/implicitDialects/sql/: Db2SqlVisitor.java
server/engine/src/test/java/org/eclipse/lsp/cobol/usecases/sql/: TestSqlHostVariable.java
server/parser/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install_1.json
server/src/main/java/com/broadcom/lsp/cobol/core/preprocessor/delegates/: GrammarPreprocessorListenerImpl.java
