module(
    name = "common",
    version = "1.0-SNAPSHOT",
)
bazel_dep(name = "rules_jvm_external", version = "6.0")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # This line is an example coordinate, you'd copy-paste your actual dependencies here
        # from your build.gradle or pom.xml file.
        "org.projectlombok:lombok:1.18.30",
        "com.google.guava:guava:32.0.1-jre",
        "com.google.code.gson:gson:2.8.9",
        "ch.qos.logback:logback-classic:1.3.14",
        "org.eclipse.lsp4j:org.eclipse.lsp4j:0.14.0",
        "org.apache.commons:commons-lang3:3.12.0",
        "org.junit.jupiter:junit-jupiter-engine:5.6.0",
        "org.junit.jupiter:junit-jupiter-params:5.6.0",
        "org.junit.platform:junit-platform-runner:1.6.0",
        "org.mockito:mockito-core:4.6.1",
        "org.mockito:mockito-junit-jupiter:4.6.1",
        "com.google.code.findbugs:jsr305:3.0.2",
        "org.slf4j:slf4j-api:2.0.7",
        "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.14.0"
    ],
   lock_file = "//:maven_install.json",
)
use_repo(maven, "maven", "unpinned_maven")