bazel_dep(name = "rules_jvm_external", version = "6.0")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # This line is an example coordinate, you'd copy-paste your actual dependencies here
        # from your build.gradle or pom.xml file.
        "org.eclipse.lsp.cobol:parser:1.0-SNAPSHOT",
        "org.antlr:antlr4:4.7.1",
        "org.antlr:antlr4-runtime:4.7.1",
        "org.eclipse.lsp4j:org.eclipse.lsp4j:0.14.0",
        "org.projectlombok:lombok:1.18.30",
        "com.google.guava:guava:32.0.1-jre",
        "com.google.code.gson:gson:2.8.9",
        "ch.qos.logback:logback-classic:1.3.14",
        "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.14.0",
        "com.google.inject:guice-no_aop:4.2.2",
        "com.google.inject.extensions:guice-assistedinject:4.2.2",
        "com.google.guava:guava:32.0.1-jre",
        "org.apache.commons:commons-lang3:3.12.0",
        "commons-io:commons-io:2.10.0",
        "org.apache.commons:commons-text:1.10.0",
        "org.slf4j:slf4j-api:2.0.9",
        "ch.qos.logback:logback-classic:1.3.14",
        "info.picocli:picocli:jar:4.7.5"
    ],
)
use_repo(maven, "maven")