load("@rules_jvm_external//:defs.bzl", "artifact")
#load("@rules_java//java:defs.bzl", "java_library", "java_import")
package(default_visibility = ["//visibility:public"])

java_library(
    name = "parser",
    srcs = glob(["src/main/java/**/*.java"])+ [":antlr_gen"],
    deps = [
        artifact("com.google.guava:guava"),
        artifact("org.antlr:antlr4"),
        artifact("org.antlr:antlr4-runtime"),
        ":lombok1",
        "@common//:common"
    ],
     visibility = ["//visibility:public"],
)

java_import(
    name = "antlr_jar",
    jars = ["@maven//:org/antlr/antlr4/4.7.1/antlr4-4.7.1-complete.jar"],
)

genrule(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/org/eclipse/lsp/cobol/core/parser/*.g4"]),
    tools = [":antlr_jar"],
    cmd = "java -Xmx500M -cp $(locations :antlr_jar) org.antlr.v4.Tool -Dlanguage=Java -visitor -package org.eclipse.lsp.cobol.core -o $(RULEDIR) $(SRCS)",
    outs = ["CobolLexer.interp",
            "CobolLexer.java",
            "CobolLexer.tokens",
            "CobolParser.interp",
            "CobolParser.java",
            "CobolParser.tokens",
            "CobolParserBaseListener.java",
            "CobolParserBaseVisitor.java",
            "CobolParserListener.java",
            "CobolParserVisitor.java"],
    visibility = [ "//visibility:public" ]
)

java_plugin(
    name = "lombok_plugin",
    generates_api = True,
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok1",
    exported_plugins = [
        ":lombok_plugin",
    ],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:org_projectlombok_lombok",
    ],
)