bazel_dep(name = "rules_jvm_external", version = "6.0")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.antlr:antlr4:4.7.1",
        "org.antlr:antlr4-runtime:4.7.1",
        "com.google.guava:guava:32.0.1-jre",
         "org.projectlombok:lombok:1.18.30",
    ],

   lock_file = "//:maven_install.json",
)
use_repo(maven, "maven", "unpinned_maven")