module(
    name = "parser",
    version = "1.0-SNAPSHOT",
)
bazel_dep(name = "rules_jvm_external", version = "6.0")
# Depend on module common at a local path.
# The bazel_dep statement is necessary because the root module must have visibility on common.
bazel_dep(name = "common", version="")
local_path_override(
    module_name = "common",
    path = "../common",
)
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
bazel_dep(name = "rules_cc", version = "0.0.1")
maven.install(
    artifacts = [
        "org.antlr:antlr4:4.7.1",
        "org.antlr:antlr4-runtime:4.7.1",
        "com.google.guava:guava:32.0.1-jre",
         "org.projectlombok:lombok:1.18.30",
         "org.antlr:stringtemplate:4.0.2",
    ],

#   lock_file = "//:maven_install.json",
)
maven.artifact(
    artifact = "antlr4",
    group = "org.antlr",
    version = "4.7.1",
    classifier = "complete"
)
#use_repo(maven, "maven", "unpinned_maven")
use_repo(maven, "maven")